--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
   </head>
   <body>
     <header class="header">
-        <img class="header__logo" src="./images/logo.svg" alt="logo" />
+        <a>
+            <img class="header__logo" src="./images/logo.svg" alt="logo" />
+        </a>
         <nav class="header__nav">
-            <a class="header__nav_link" href="#white-list__banner">Главная</a>
+            <a class="header__nav_link active" href="#white-list__banner">Главная</a>
             <a class="header__nav_link" href="#">О нас</a>
             <a class="header__nav_link" href="#footer">Контакты</a>
         </nav>
     </header>
     <main class="main">
         <section id="white-list__banner" class="banner">
-            <h1 class="title banner__title">
+            <h1 class="banner__title">
                 <span class="text_left">C</span>
                 <span class="text_center">чистого</span>
                 <span class="text_right">листа</span>
@@ -27,7 +29,7 @@
         <section id="white-list__description" class="white-list">
             <header class="white-list__header">
                 <span>8 способов борьбы со<br/> страхом чистого листа</span>
-                <span>05.06.2022 г.</span>
+                <time>05.06.2022 г.</time>
             </header>
             <p class="text">
                 Начинать что-то новое — тяжело и страшно. Даже если это просто небольшой 
@@ -44,7 +46,7 @@
         <section id="why-is-it-scarry" class="why-is-it-scarry">
             <h2 class="title section__title why-title">
                 <span class="text_right">Почему чистый лист</span>
-                <span>— такой cтрашный?</span>
+                <span>&mdash; такой cтрашный?</span>
             </h2>
             <p class="text-description">
                 Сам по себе чистый лист, конечно, не страшный. Боимся мы чаще всего объёма работы, которую 
@@ -117,7 +119,7 @@
             <ul class="advices">
                 <li class="advice advice_personal">
                     <img class="advice__person" src="./images/polyarinov.png" alt="фото Алексея Поляринова" />
-                    <span class="advice__caption">Алексей Поляринов</span>
+                    <p class="advice__caption">Алексей Поляринов</span>
                     <h3 class="advice__title">Начать любыми словами</h3>
                     <p class="text">
                         Любыми — без шуток. Если не верите нам, посмотрите, например, чем открывается эссе 
@@ -139,7 +141,7 @@
                 </li>
                 <li class="advice advice_personal">
                     <img class="advice__person" src="./images/bunin.png" alt="фото Ивана Бунина" />
-                    <span class="advice__caption">Иван Бунин</span>
+                    <p class="advice__caption">Иван Бунин</span>
                     <h3 class="advice__title">Сделать из задачи рутину</h3>
                     <p class="text">
                         «Писать стихи нужно каждый день, подобно тому как скрипач или пианист непременно 
@@ -155,10 +157,14 @@
     </main>
     <footer class="footer" id="footer">
         <span class="footer__copyright">&copy; VЁRSTKA</span>
-        <div class="footer__social-block">
-            <a class="social-block__link" href="" target="_blank">ВК</a>
-            <a class="social-block__link" href="" target="_blank">Ютуб</a>
-        </div>
+        <ul class="footer__social-block">
+            <li class="footer__social-item">
+                <a class="social-block__link" href="" target="_blank">ВК</a>
+            </li>
+            <li class="footer__social-item">
+                <a class="social-block__link" href="" target="_blank">Ютуб</a>
+            </li>
+        </ul>
     </footer>
   </body>
 </html>
